# cddee

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  list.c  list.h  main.c  phonenumbers.txt  userFunctions.c  userFunctions.h
src/: Makefile.am  test.c
